--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,74 +1,85 @@
-html, body, #root {
+html, body {
   height: 100%;
   margin: 0;
   color: white;
   font-family: Arial, sans-serif;
 }
+
 #root{
-  padding: 0;
+  min-height: 100%;
+  padding: 24px;
   background-color: #121212;
   display: flex;
   justify-content: center;
-  align-items: center;
-  
-  
-
+  margin: 0px;
+  color: white;
+  font-family: Arial, sans-serif;
 }
+
+.main-container{
+  width: 88%;
+  height: 100%;
+  background-color: #1E1E1E;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding:16px;
+  margin: 16px;
+}
+
+
 
 .search{
   padding: 0px;
-  position: absolute;
-  top: 2px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100px;
+  width: 60%;
   
 }
 
-.search-inner{
-  display: relative;
-  padding: 0;
-
-}
-
 .search-input{
+  width: 40vw;
   color: white;
   height: 28px;;
   border: none;
   padding: 2px;
+  padding-left: 12px;
   font-size: 16px;
   background-color: #BB86FC;
+  display: flex;
+  flex-direction: row;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
+
+.search-input:focus{
+  outline: none;
+  border: none;
+}
+
 
 .search-button{
-  position: absolute;
-  right: -50px;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 30px;
+  height: 32px;
   padding: 0 10px;
   border: none;
-  background-color: #3700B3;
+  background-color: #BB86FC;
   color: #fff;
-  border-radius: 6px;
+  border-radius: 0px;
   cursor: pointer;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-.main-container{
-  width: min(1000px, 85.8vw);
-  height: min(900px, 91.8vh);
-
-  margin: auto;
-  box-sizing: border-box;
-  background-color: #1E1E1E;
-  
-  padding: 0px;
+.search-home-profile-div{
   display: flex;
-  flex-direction: column;
-  gap: 16px;
-  overflow: auto;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 32px;
+  padding: 0px;
 }
 
 /* ----------- Home/Profile Selector Styles ----------- */
@@ -116,4 +127,103 @@ html, body, #root {
 }
 .selector-btn.active-profile svg {
   color: #fff;
+}
+
+.sve-analize-skupa-div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: 16px 28px 16px 16px;
+  background-color: rgb(40, 40, 40);
+  border-radius: 5px;
+  gap: 12px;
+}
+
+.odobrena-basic-analiza{
+  background-color: rgb(105, 206, 140);
+}
+.neodobrena-basic-analiza{
+  background-color: rgb(210, 78, 78);
+}
+
+.basic-analiza{
+  width: 100%;
+  display: flex;
+  padding-left: 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  border-radius: 5px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.basic-analiza:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
+}
+
+.basic-analiza:hover{
+  cursor: pointer;
+}
+
+.ime-skupa{
+  color:rgb(187, 187, 187);
+}
+
+.rest-of-basic-info{
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+.main-container-analize{
+  width: 88%;
+  height: 100%;
+  background-color: #1E1E1E;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding:16px;
+  margin: 16px;
+
+}
+
+.main-container-analize hr{
+  width: 100%;
+}
+
+.kategorija-1{
+  background-color: rgb(52, 52, 52);
+ border-radius: 5px;
+ padding: 6px;
+}
+
+.kategorija-2{
+ background-color: rgb(48, 48, 48);
+ border-radius: 5px;
+ padding: 8px;
+}
+
+.analiza-opis-div{
+  width: 50%;
+}
+.analiza-kljucne-div{
+  width:50%;
+}
+.analiza-all-info{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.analiza-opis-kljucne-div{
+  height: 100%;
+}
+.analiza-ostalo-div{
+  height: 100%;
+  background-color: #373737;
+  padding: 2px 16px 2px 16px;
+  border-radius: 10px;
 }
