--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,13 +11,15 @@ html, body {
   background-color: #121212;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin: 0px;
   color: white;
   font-family: Arial, sans-serif;
 }
 
 .main-container{
-  width: 88%;
+  width: 60rem;
   height: 100%;
   background-color: #1E1E1E;
   display: flex;
@@ -54,6 +56,10 @@ html, body {
   border-bottom-left-radius: 10px;
 }
 
+.search-input::placeholder{
+  color: #cecece;
+}
+
 .search-input:focus{
   outline: none;
   border: none;
@@ -72,10 +78,10 @@ html, body {
   border-bottom-right-radius: 10px;
 }
 
-.search-home-profile-div{
+.search-skupovi-div{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100%;
   margin: 32px;
@@ -226,4 +232,16 @@ html, body {
   background-color: #373737;
   padding: 2px 16px 2px 16px;
   border-radius: 10px;
+}
+
+.ikona-naslov-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.ikona{
+  color:#b983ff;
 }
