Updateing front page

--- a/frontend/src/DatasetPage.css
+++ b/frontend/src/DatasetPage.css
@@ -16,9 +16,9 @@ html, body {
   font-family: Arial, sans-serif;
 }
 
-.page-title{
+.dataset-title{
   font-size: 2rem;
-  margin-bottom: 3rem;
+  margin-bottom: 0px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -27,7 +27,106 @@ html, body {
   text-decoration: underline;
 
 }
+.dataset-url{
+    color: #ffffff;
+    text-align: center;
+    margin-top: 4px;
+    text-decoration: underline;
+}
 
+.pregled-komentara-lable{
+  display: flex;
+  align-items: center;  
+  justify-content: center;
+  gap: 8px;
+  margin-top: 32px;
+  margin-bottom: 16px;
+  
+}
+
+.analysis-card{
+  background-color: #2C2C2C;
+  padding: 16px;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  position: relative;
+
+}
+
+.user-info{
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 8px;
+    top: 16px;
+    left: 16px;
+    font-size: 1.2rem;
+    color: #BBBBBB;
+}
+
+
+/* ----------- AI/normal Selector Styles ----------- */
+
+.AI-normal-selector{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row ;
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 0px;
+    width: fit-content;
+    margin: 5px auto;
+    scale: 0.7;
+}
+
+.selector-btn {
+  background-color: transparent;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 14px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease;
+}
+
+.selector-btn svg {
+  color: #000;
+  transition: color 0.2s ease;
+}
+
+.selector-btn.active-AISearch {
+  background-color: #BB86FC;
+}
+
+
+.selector-btn.active-normalSearch {
+  background-color: #6be0d7;
+}
+
+.selector-btn.active-AISearch svg {
+  color: #fff;
+}
+.selector-btn.active-normalSearch svg {
+  color: #fff;
+}
+
+
+/* ------------------------------------------- */
+
+/* ----------- Comments Styles ----------- */
+.commentIndex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+
+
+/* ----------- Main Container Styles ----------- */
 .main-container{
   width: 88%;
   height: 100%;
