--- a/frontend/src/HomePage.css
+++ b/frontend/src/HomePage.css
@@ -18,20 +18,8 @@ html, body {
   font-family: Arial, sans-serif;
 }
 
-.page-title{
-  font-size: 2rem;
-  margin-bottom: 3rem;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  text-decoration: underline;
-
-}
-
 .main-container{
-  width: 60rem;
+  width: 60%;
   height: 100%;
   background-color: #1E1E1E;
   display: flex;
@@ -95,7 +83,6 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
   margin: 32px;
   padding: 0px;
 }
@@ -251,9 +238,40 @@ html, body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  text-align: center;
   gap: 16px;
 }
 
 .ikona{
   color:#b983ff;
+  width: 36px;
+  height: 36px;
+}
+
+.search-skupovi-h1{
+  text-decoration: underline;
+}
+
+.publisher-card{
+  width: 100%;
+  background-color: #b983ff;
+  border-radius: 10px;
+  padding: 0px 8px 0px 8px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.publisher-para{
+  width: 100%;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.recent-publishers-div {
+  display: grid;
+  grid-template-columns: 29% 29% 29%;
+  justify-content: space-between;
 }
