--- a/frontend/src/DatasetPage.css
+++ b/frontend/src/DatasetPage.css
@@ -1,3 +1,8 @@
+*{
+  box-sizing: border-box;
+}
+
+
 .dataset-title{
   font-size: 2rem;
   margin-bottom: 0px;
@@ -38,6 +43,16 @@
     font-size: 1.2rem;
     color: #BBBBBB;
 }
+
+.analysis-card{
+  background-color: #2C2C2C;
+  padding: 16px;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  position: relative;
+
+}
+
 
 /* ----------- AI/normal Selector Styles ----------- */
 
@@ -86,6 +101,20 @@
 .comment-bubble-space{
     
     width: 100%;
+}
+
+.comment-bubble-normal{
+    position: relative;
+    width: 100%;
+    background-color: rgb(110, 108, 108);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+}
+.coment-bubble-normal.p{
+    margin: 0px;
+    
+
 }
 
 /* ----------- Main Container Styles ----------- */
