--- a/frontend/src/HomePage.css
+++ b/frontend/src/HomePage.css
@@ -19,7 +19,7 @@ html, body {
 }
 
 .main-container{
-  width: 60%;
+  width: 90%;
   min-height: 100%;
   background-color: #1E1E1E;
   display: flex;
@@ -276,6 +276,7 @@ html, body {
   display: grid;
   grid-template-columns: 29% 29% 29%;
   justify-content: space-between;
+  gap: 15px;;
 }
 
 @media (max-width: 750px) {
@@ -284,7 +285,7 @@ html, body {
     width: 100%;
   }
   .main-container {
-    padding: 0px;
+    padding: 5px;
   }
   .skupovi-podataka-grid {
     gap: 12px;
