--- a/frontend/src/style/CommentBubble.css
+++ b/frontend/src/style/CommentBubble.css
@@ -9,6 +9,16 @@
 
 }
 
+.comment-profile{
+    position: relative;
+    width: 100%;
+    background-color: rgb(227, 197, 197);
+    color: black;
+    padding: 10px;
+    border-radius: 5px;
+
+}
+
 .left{
     background-color: white;
 }
