--- a/frontend/src/style/global/common.css
+++ b/frontend/src/style/global/common.css
@@ -3,3 +3,9 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+input[type="text"],
+input[type="text"]::placeholder {
+  background-color: var(--text-box);
+  color: var(--text-light);
+}
