--- a/frontend/src/style/HomePage.css
+++ b/frontend/src/style/HomePage.css
@@ -1,11 +1,12 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   background-color: #121212;
   font-family: Arial, sans-serif;
 }
 
-#root{
+#root {
   min-height: 100vh;
   padding: 15px;
   background-color: #121212;
@@ -17,10 +18,10 @@ html, body {
   font-family: Arial, sans-serif;
 }
 
-.main-container{
+.main-container {
   width: 90%;
   min-height: 100%;
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -29,9 +30,7 @@ html, body {
   margin-right: 16px;
 }
 
-
-
-.search{
+.search {
   padding: 0px;
   display: flex;
   flex-direction: row;
@@ -41,36 +40,32 @@ html, body {
   position: relative;
 }
 
-.search-container{
-  
+.search-container {
   width: 40vw;
-  color: white;
-  height: 32px;;
+  height: 32px;
   border: none;
   padding: 2px;
   padding-left: 12px;
   font-size: 16px;
-  background-color: #BB86FC;
   display: flex;
   flex-direction: row;
   border-radius: 10px;
 }
 
-.search-container::placeholder{
+.search-container::placeholder {
   color: #cecece;
 }
 
-.search-container:focus{
+.search-container:focus {
   outline: none;
   border: none;
 }
 
-
-.search-button{
+.search-button {
   height: 32px;
   padding: 0 10px;
   border: none;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   color: #fff;
   border-radius: 0px;
   cursor: pointer;
@@ -96,10 +91,9 @@ html, body {
 
 .search-back-button:hover {
   background: rgba(255, 255, 255, 0.2);
-  
 }
 
-.search-skupovi-div{
+.search-skupovi-div {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -109,7 +103,7 @@ html, body {
   width: auto;
 }
 
-.search-clear-button{
+.search-clear-button {
   position: absolute;
   right: 60px;
   background: none;
@@ -127,7 +121,6 @@ html, body {
 
 .search-clear-button:hover {
   background: rgba(255, 255, 255, 0.2);
-  
 }
 
 /* ----------- Home/Profile Selector Styles ----------- */
@@ -162,9 +155,8 @@ html, body {
 }
 
 .selector-btn.active-home {
-  background-color: #BB86FC;
+  background-color: #bb86fc;
 }
-
 
 .selector-btn.active-profile {
   background-color: #6be0d7;
@@ -177,7 +169,7 @@ html, body {
   color: #fff;
 }
 
-.sve-analize-skupa-div{
+.sve-analize-skupa-div {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -188,14 +180,14 @@ html, body {
   gap: 12px;
 }
 
-.odobrena-basic-analiza{
+.odobrena-basic-analiza {
   background-color: rgb(105, 206, 140);
 }
-.neodobrena-basic-analiza{
+.neodobrena-basic-analiza {
   background-color: rgb(210, 78, 78);
 }
 
-.basic-analiza{
+.basic-analiza {
   width: 100%;
   display: flex;
   padding-left: 12px;
@@ -211,15 +203,15 @@ html, body {
   box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
 }
 
-.basic-analiza:hover{
+.basic-analiza:hover {
   cursor: pointer;
 }
 
-.ime-skupa{
-  color:rgb(187, 187, 187);
+.ime-skupa {
+  color: rgb(187, 187, 187);
 }
 
-.rest-of-basic-info{
+.rest-of-basic-info {
   width: 95%;
   display: flex;
   flex-direction: row;
@@ -227,56 +219,55 @@ html, body {
   padding: 12px;
 }
 
-.main-container-analize{
+.main-container-analize {
   width: 88%;
   height: 100%;
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding:16px;
+  padding: 16px;
   margin: 16px;
-
 }
 
-.main-container-analize hr{
+.main-container-analize hr {
   width: 100%;
 }
 
-.kategorija-1{
+.kategorija-1 {
   background-color: rgb(52, 52, 52);
- border-radius: 5px;
- padding: 6px;
+  border-radius: 5px;
+  padding: 6px;
 }
 
-.kategorija-2{
- background-color: rgb(48, 48, 48);
- border-radius: 5px;
- padding: 8px;
+.kategorija-2 {
+  background-color: rgb(48, 48, 48);
+  border-radius: 5px;
+  padding: 8px;
 }
 
-.analiza-opis-div{
+.analiza-opis-div {
   width: 50%;
 }
-.analiza-kljucne-div{
-  width:50%;
+.analiza-kljucne-div {
+  width: 50%;
 }
-.analiza-all-info{
+.analiza-all-info {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.analiza-opis-kljucne-div{
+.analiza-opis-kljucne-div {
   height: 100%;
 }
-.analiza-ostalo-div{
+.analiza-ostalo-div {
   height: 100%;
   background-color: #373737;
   padding: 2px 16px 2px 16px;
   border-radius: 10px;
 }
 
-.ikona-naslov-div{
+.ikona-naslov-div {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -285,15 +276,13 @@ html, body {
   gap: 16px;
 }
 
-.ikona{
-  color:#b983ff;
+.ikona {
+  color: #b983ff;
   width: 36px;
   height: 36px;
 }
 
-
-
-.publisher-card{
+.publisher-card {
   width: 100%;
   background: linear-gradient(135deg, #b983ff 0%, #9d6fd8 100%);
   border-radius: 12px;
@@ -311,7 +300,6 @@ html, body {
 
 .publisher-card:hover {
   transform: translateY(-5px);
-  
 }
 
 .publisher-name {
@@ -343,18 +331,18 @@ html, body {
   .recent-publishers-div {
     grid-template-columns: 1fr;
   }
-  
+
   .publisher-card {
     min-height: 100px;
   }
-  .main-container{
+  .main-container {
     width: 100%;
   }
-  .ikona{
+  .ikona {
     display: none;
   }
 
-  .search-skupovi-h1{
+  .search-skupovi-h1 {
     font-size: 1.5em;
   }
 }
@@ -382,7 +370,6 @@ html, body {
   }
 }
 
-
 /* @keyframes overlayFadeIn {
   from {
     background-color: rgba(0, 0, 0, 0);
@@ -393,7 +380,7 @@ html, body {
 } */
 
 .main-container.search-active::before {
-  content: '';
+  content: "";
   position: fixed;
   top: 0;
   left: 0;
@@ -413,39 +400,33 @@ html, body {
   animation: fadeIn 0.5s ease-in-out forwards;
 }
 
-
 .izvojeni-skupovi-exit {
   animation: fadeOut 0.3s ease-in-out forwards;
 }
-.sidebar{
+.sidebar {
   height: 100%;
   border: 1px solid #333;
   min-width: 35%;
-
 }
 
-
-.profile-page-container{
+.profile-page-container {
   display: flex;
   flex-direction: row;
 }
 
-
-@media (max-width: 1000px){
-  .profile-page-container{
+@media (max-width: 1000px) {
+  .profile-page-container {
     flex-direction: column;
-    
   }
 }
 
 .request-card {
-  
   margin-top: 16px;
   padding: 16px;
   border: 1px solid #e3e6eb;
   border-radius: 10px;
-  margin:10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.04);
+  margin: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.04);
 }
 
 .request-card h2 {
@@ -475,11 +456,8 @@ html, body {
   gap: 12px;
 }
 
-
-
-
 /* Profile Page/ Upload */
-.overlay{
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -492,16 +470,16 @@ html, body {
   z-index: 1000;
 }
 
-.import-modal{
+.import-modal {
   position: relative;
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   padding: 24px;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   width: 400px;
   max-width: 90%;
-} 
-.import-modal-close-button{
+}
+.import-modal-close-button {
   position: absolute;
   top: 16px;
   right: 16px;
