--- a/frontend/src/style/IzdvojeniSkupoviPodataka.css
+++ b/frontend/src/style/IzdvojeniSkupoviPodataka.css
@@ -23,12 +23,15 @@
   grid-template-columns: repeat(1, 1fr);
 }
 
+.button-wrapper {
+  margin-top: 1.5rem;
+}
+
 @media (max-width: 1000px) {
   .skupovi-podataka-grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-
 
 .skup-podataka-card {
   position: relative;
@@ -78,9 +81,8 @@
 
 .analiza-card h3:hover,
 .skup-podataka-card h3:hover,
-.skup-podatka-card h3:hover{
+.skup-podatka-card h3:hover {
   cursor: pointer;
-
 }
 
 .analiza-card .datum,
