--- a/frontend/src/style/StatisticsPage.css
+++ b/frontend/src/style/StatisticsPage.css
@@ -26,7 +26,7 @@ main {
 }
 
 .main-container {
-  width: 90%;
+  width: fit-content;
   min-height: 100%;
   background-color: #1e1e1e;
   display: flex;
