--- a/frontend/src/style/HomePage.css
+++ b/frontend/src/style/HomePage.css
@@ -19,7 +19,7 @@ body {
 }
 
 .main-container {
-  width: 90%;
+  width: fit-content;
   min-height: 100%;
   background-color: #1e1e1e;
   display: flex;
