--- a/frontend/src/style/FilterContainer.css
+++ b/frontend/src/style/FilterContainer.css
@@ -97,7 +97,7 @@
   display: flex;
   flex-direction: row;
   gap: 12px;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   margin-bottom: 24px;
   margin-top: 12px;
