--- a/frontend/src/style/HomePage.css
+++ b/frontend/src/style/HomePage.css
@@ -25,9 +25,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding: 16px;
-  margin-left: 16px;
-  margin-right: 16px;
 }
 
 .search {
@@ -198,7 +195,9 @@ body {
   justify-content: center;
   align-items: start;
   border-radius: 5px;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
 }
 
 .basic-analiza:hover {
@@ -277,10 +276,18 @@ body {
   align-items: center;
   text-align: center;
   gap: 16px;
+  padding-inline: 4rem;
+  align-self: center;
 }
 
 .ikona {
-  color: #b983ff;
+  color: var(--primary);
+  width: 36px;
+  height: 36px;
+}
+
+.ikona-profile {
+  color: var(--secondary);
   width: 36px;
   height: 36px;
 }
@@ -296,7 +303,9 @@ body {
   justify-content: center;
   align-items: center;
   gap: 8px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
   cursor: pointer;
   min-height: 120px;
 }
@@ -383,7 +392,7 @@ body {
 } */
 
 .main-container.search-active::before {
-  content: '';
+  content: "";
   position: fixed;
   top: 0;
   left: 0;
@@ -409,17 +418,68 @@ body {
 .sidebar {
   height: 100%;
   border: 1px solid #333;
-  min-width: 35%;
+  width: 100%;
+}
+
+.topper-wrapper {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #333;
+  height: fit;
+  border: 1px solid #333;
+  max-width: 80rem;
+}
+
+.topper-wrapper > .ikona-naslov-div {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
 }
 
 .profile-page-container {
   display: flex;
-  flex-direction: row;
+  gap: 1rem;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  /* width: clamp(20rem, 100%, 53rem); */
+  /* display: grid;
+  grid-template-columns: 53rem 30rem;
+  gap: 1rem; */
 }
 
-@media (max-width: 1000px) {
+.left-col {
+  width: 53rem;
+  height: fit-content;
+}
+
+.right-col {
+  width: 26rem;
+  height: fit-content;
+}
+
+@media (max-width: 83rem) {
   .profile-page-container {
     flex-direction: column;
+    gap: 1rem;
+  }
+
+  .left-col,
+  .right-col {
+    width: 100%;
+  }
+}
+
+@media (min-width: 65rem) {
+  .topper-wrapper {
+    flex-direction: column;
+  }
+
+  .topper-wrapper > .search-skupovi-div {
+    flex-direction: row;
+  }
+  .topper-wrapper > .ikona-naslov-div {
+    flex-direction: row;
+    gap: 1rem;
   }
 }
 
@@ -430,6 +490,7 @@ body {
   border-radius: 10px;
   margin: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.04);
+  width: clamp(20rem, 100%, 40rem);
 }
 
 .request-card h2 {
