--- a/frontend/src/style/global/colors.css
+++ b/frontend/src/style/global/colors.css
@@ -2,12 +2,12 @@
   --background: #121212;
   --surface: #1e1e1e;
   --text-box: #707070;
-  --primary: #bb86fc;
-  --secondary: #03dac6;
+  --primary: #8422fa;
+  --secondary: #0efbe4;
   --text-light: #ffffff;
   --text-dark: #272727;
-  --error: #d62828;
+  --error: #c22525;
   --warning: #ffb703;
-  --correct: #2a9d8f;
+  --correct: #2a9d5c;
   --stats: #ff8042;
 }
