--- a/frontend/src/style/global/colors.css
+++ b/frontend/src/style/global/colors.css
@@ -2,7 +2,7 @@
   --background: #121212;
   --surface: #1e1e1e;
   --text-box: #707070;
-  --primary: #8422fa;
+  --primary: #811bfe;
   --secondary: #0efbe4;
   --text-light: #ffffff;
   --text-dark: #272727;
