--- a/frontend/src/style/Toggle.css
+++ b/frontend/src/style/Toggle.css
@@ -9,8 +9,8 @@
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
-  width: 100px;
-  height: 50px;
+  width: 40px;
+  height: 20px;
   background: grey;
   border-radius: 100px;
   position: relative;
@@ -20,21 +20,21 @@
 .react-toggle-label .react-toggle-button {
   content: '';
   position: absolute;
-  top: 2px;
-  left: 2px;
-  width: 45px;
-  height: 45px;
-  border-radius: 45px;
+  top: 0px;
+  left: 0px;
+  width: 20px;
+  height: 20px;
+  border-radius: 18px;
   transition: 0.2s;
   background: #fff;
   box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
 }
 
 .react-toggle-checkbox:checked + .react-toggle-label .react-toggle-button {
-  left: calc(100% - 2px);
+  left: calc(100%);
   transform: translateX(-100%);
 }
 
-.react-toggle-label:active .react-toggle-button {
+/* .react-toggle-label:active .react-toggle-button {
   width: 60px;
-}
+} */
