--- a/frontend/src/style/FilterContainer.css
+++ b/frontend/src/style/FilterContainer.css
@@ -2,7 +2,7 @@
   padding: 16px;
   border: 1px solid #ddd;
   border-radius: 8px;
-  height: auto;
+  height: fit-content;
   width: fit-content;
 }
 
